--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.17",
-    "@react-navigation/native-stack": "^7.3.24",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "@supabase/supabase-js": "^2.53.0",
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.11.0",
-    "expo": "~53.0.20",
+    "expo": "53.0.22",
     "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.5",
     "expo-camera": "~16.1.11",
@@ -33,13 +33,13 @@
     "expo-image": "~2.4.0",
     "expo-image-picker": "~16.1.4",
     "expo-linking": "~7.1.7",
-    "expo-navigation-bar": "~4.2.7",
-    "expo-router": "~5.1.4",
-    "expo-secure-store": "~14.2.3",
+    "expo-navigation-bar": "~4.2.8",
+    "expo-router": "~5.1.5",
+    "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
