--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@supabase/supabase-js": "^2.53.0",
+    "@tanstack/react-query": "^5.85.5",
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.11.0",
     "expo": "53.0.22",
