--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@tanstack/react-query": "^5.85.5",
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.11.0",
-    "expo": "^54.0.8",
+    "expo": "54.0.10",
     "expo-auth-session": "~7.0.8",
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
@@ -36,7 +36,7 @@
     "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-navigation-bar": "~5.0.8",
-    "expo-router": "6.0.7",
+    "expo-router": "6.0.8",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
@@ -51,7 +51,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-reanimated": "~4.1.0",
+    "react-native-reanimated": "4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "^0.21.0",
